# dt-duckiebot-interface

./: .bumpversion.cfg  .dockerignore  .dtproject  .gitattributes  .gitignore  .gitmodules  00_part.md  DEV_README.md  Dockerfile  Jenkinsfile  Makefile  README.md  configurations.yaml  dependencies-apt.txt  dependencies-py.txt  dependencies-py3.computed.txt  dependencies-py3.dt.txt  dependencies-py3.mock.txt  dependencies-py3.txt  docker_setup.sh  launch.sh  packages-ros.txt  requirements.txt  run_all_drivers.sh
.circleci/: config.yml
.github/: pull_request_template.md
.github/workflows/: circleci.yml
adafruit_drivers/: .autogenerated.md  CMakeLists.txt  package.xml
adafruit_drivers/include/Adafruit_I2C/: Adafruit_I2C.py
assets/entrypoint.d/: 01.set-devices-permissions.sh  set-devices-permissions.sh
assets/environment.d/: 00-configure-prettyprinter.sh  10-camera-jetson-nano.sh
assets/etc/ld.so.conf.d/: nvidia-tegra.conf
camera_driver/: CMakeLists.txt
camera_driver/src/: camera_node_continuous.py  camera_node_sequence.py
catkin_ws/src/adafruit_drivers/: README.md
catkin_ws/src/camera_driver/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/duckietown/: CMakeLists.txt
catkin_ws/src/duckietown_msgs/: CMakeLists.txt
catkin_ws/src/duckietown_msgs/msg/: LEDPattern.msg
catkin_ws/src/joystick_driver/: CMakeLists.txt  package.xml
catkin_ws/src/joystick_node/: CMakeLists.txt  package.xml
catkin_ws/src/joystick_node/launch/: joystick_node.launch
catkin_ws/src/led_emitter/: CMakeLists.txt  __init__.py
catkin_ws/src/rgb_led/: .autogenerated.md  CMakeLists.txt  package.xml
catkin_ws/src/rgb_led/include/rgb_led/: __init__.py  duckietown_lights.py  rgb_led.py
catkin_ws/src/rgb_led/script/: blink  fancy2
catkin_ws/src/wheels_driver/: CMakeLists.txt  __init__.py  (+1 more)
dagu_car/: .autogenerated.md  CMakeLists.txt  package.xml
dagu_car/include/dagu_car/: dagu_wheels_driver.py  pot.py
dagu_car/launch/: wheels_driver_node.launch
dagu_car/script/: velocity_to_pose_node.easy_node.yaml
dagu_car/src/: car_cmd_switch_node.py  forward_kinematics_node.py  inverse_kinematics_node.py  wheels_driver_node.py
docs/: Dockerfile  README.md  config.yaml  index.rst
docs/source/: conf.py  dt_style.css  index.rst  mock_imports  packages.rst
dtproject/: containers.yaml  devcontainers.yaml  self.yaml
joy_mapper/: .autogenerated.md  package.xml
joy_mapper/src/: joy_mapper_node.py  joy_mapper_node2.easy_node.yaml  joy_mapper_node2.py
joystick_driver/: CMakeLists.txt  package.xml
launchers/: actuator-display.sh  actuator-lcd-display.sh  actuator-leds.sh  actuator-lights.sh  actuator-wheels.sh  betaflight-sitl.sh  default-duckiebot.sh  default-duckiedrone.sh  default.sh  display-renderer.sh  flight-controller-remote-serial.sh  flight-controller.sh  sensor-camera.sh  sensor-imu.sh  sensor-power-button.sh  sensor-tof-bottom.sh  sensor-tof-front-center.sh  sensor-tof.sh  sensor-wheel-encoder-left.sh  sensor-wheel-encoder-right.sh  sensor-wheel-encoders.sh
led_emitter/: CMakeLists.txt  README.md  package.xml
led_emitter/src/: led_emitter_node.py  led_emitter_node_old.py
pi_camera/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
pi_camera/src/: cam_info_reader_node.py  camera_node_continuous.easy_node.yaml  camera_node_continuous.py  camera_node_sequence.py  decoder_node.easy_node.yaml  decoder_node.py  img_process_node.easy_node.yaml  img_process_node.py
rst/: index.rst  packages.rst
tests/: test_fc_telemetry.py
wheels_driver/: package.xml
(+34 files in other folders)
