<?xml version="1.0"?>
<package>
  <name>joystick</name>
  <version>1.0.0</version>
  <description>Contains only a launch file to interface the joystick driver. Uses the open source joy node</description>

  <maintainer email="info@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
