<?xml version="1.0"?>
<package>
  <name>rgb_led</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `rgb_led` in `package.xml`.</description>

  <author email="yershov@mit.edu">Dmitry Yershov</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>


  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rospy</run_depend>


</package>
